--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
+    "@nextui-org/system": "^2.0.15",
+    "@nextui-org/theme": "^2.1.17",
     "axios": "^1.6.7",
     "framer-motion": "^11.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.22.0"
   },
   "devDependencies": {
