--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@nextui-org/theme": "^2.1.17",
     "axios": "^1.6.7",
     "framer-motion": "^11.0.3",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
