--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^11.0.3",
     "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
