--- a/client/package.json
+++ b/client/package.json
@@ -19,14 +19,17 @@
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
+    "react-date-range": "^2.0.1",
     "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
-    "react-router-dom": "^6.22.0"
+    "react-router-dom": "^6.22.0",
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
     "@testing-library/react": "^14.2.1",
     "@types/react": "^18.2.55",
+    "@types/react-date-range": "^1.4.9",
     "@types/react-datepicker": "^6.0.1",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
