--- a/server/package.json
+++ b/server/package.json
@@ -20,16 +20,18 @@
   },
   "homepage": "https://github.com/muhazAhmed/teamsync-pro#readme",
   "dependencies": {
-    "axios": "^1.6.8",
+    "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.3",
     "express": "^4.18.2",
     "imagekit": "^5.0.1",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongodb": "^6.5.0",
     "mongoose": "^8.1.2",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "nodemon": "^3.0.3"
   }
 }
