--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@nextui-org/system": "^2.0.15",
     "@nextui-org/theme": "^2.1.17",
     "axios": "^1.6.7",
+    "firebase": "^10.12.2",
     "framer-motion": "^11.0.3",
     "moment": "^2.30.1",
     "react": "^18.2.0",
