--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@nextui-org/react": "^2.2.9",
     "@nextui-org/system": "^2.0.15",
     "@nextui-org/theme": "^2.1.17",
+    "@tremor/react": "^3.17.2",
     "axios": "^1.6.7",
     "firebase": "^10.12.2",
     "framer-motion": "^11.0.3",
