added new scripts

--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
     "concurrently": "^8.2.2"
   },
   "scripts": {
-    "product": "concurrently \"cd client && npm run dev\" \"cd server && npm start\""
+    "product": "concurrently \"cd client && npm run dev\" \"cd server && npm start\"",
+    "setup": "concurrently \"cd client && npm install\" \"cd server && npm install\"",
+    "host": "cd client && npm run host",
+    "client": "cd client && npm run dev",
+    "server": "cd server && npm start"
   }
 }
