--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,7 @@
     "host": "vite --host",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview --port 5173"
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.2",
