fixed setup script

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   },
   "scripts": {
     "product": "concurrently \"cd client && npm run dev\" \"cd server && npm start\"",
-    "setup": "concurrently \"cd client && npm install\" \"cd server && npm install\"",
+    "setup": "npm install && concurrently \"cd client && npm install\" \"cd server && npm install\"",
     "host": "cd client && npm run host",
     "client": "cd client && npm run dev",
     "server": "cd server && npm start"
