--- a/client/package.json
+++ b/client/package.json
@@ -16,9 +16,11 @@
     "@nextui-org/theme": "^2.2.6",
     "@tremor/react": "^3.17.2",
     "axios": "^1.7.2",
+    "file-saver": "^2.0.5",
     "firebase": "^10.12.2",
     "framer-motion": "^11.2.10",
     "moment": "^2.30.1",
+    "papaparse": "^5.4.1",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
     "react-date-range": "^2.0.1",
@@ -26,10 +28,13 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.23.1",
-    "recharts": "^2.12.7"
+    "recharts": "^2.12.7",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@testing-library/react": "^16.0.0",
+    "@types/file-saver": "^2.0.7",
+    "@types/papaparse": "^5.3.14",
     "@types/react": "^18.3.3",
     "@types/react-date-range": "^1.4.9",
     "@types/react-datepicker": "^6.2.0",
