--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-date-range": "^2.0.1",
     "react-datepicker": "^7.0.0",
     "react-dom": "^18.3.1",
+    "react-error-boundary": "^4.0.13",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.23.1",
     "recharts": "^2.12.7",
