--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@nextui-org/system": "^2.4.6",
     "@nextui-org/theme": "^2.4.5",
     "axios": "^1.8.4",
+    "clsx": "^2.1.1",
     "file-saver": "^2.0.5",
     "firebase": "^10.12.2",
     "framer-motion": "^12.7.4",
@@ -32,6 +33,7 @@
     "react-router-dom": "^6.23.1",
     "recharts": "^2.15.3",
     "socket.io-client": "^4.8.1",
+    "tailwind-merge": "^3.2.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
