--- a/client/package.json
+++ b/client/package.json
@@ -1,13 +1,14 @@
 {
   "name": "client",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite --mode dev",
     "start": "vite",
     "host": "vite --host",
     "build": "tsc && vite build",
+    "release": "standard-version",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview --port 5173"
   },
@@ -52,6 +53,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "postcss": "^8.5.3",
+    "standard-version": "^9.5.0",
     "tailwindcss": "^3.4.4",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
